force-app/main/default/objects/Motor_Insurence__c/Motor_Insurence__c.object-meta.xml
<CustomObject>
    <label>Motor Insurence</label>
    <nameField>
        <displayFormat>MIID-{0000}</displayFormat>
        <label>PolicyID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Motor Insurences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>