force-app/main/default/objects/Motor_Insurence__c/fields/Manufactured_Year__c.field-meta.xml
<CustomField>
    <fullName>Manufactured_Year__c</fullName>
    <label>Manufactured Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>