force-app/main/default/objects/Motor_Insurence__c/fields/moter_Type__c.field-meta.xml
<CustomField>
    <fullName>moter_Type__c</fullName>
    <label>moter Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>