force-app/main/default/objects/Motor_Insurence__c/fields/Motor_colour__c.field-meta.xml
<CustomField>
    <fullName>Motor_colour__c</fullName>
    <label>Motor colour</label>
    <length>40</length>
    <type>Text</type>
</CustomField>