force-app/main/default/objects/Motor_Insurence__c/fields/NO_Of_Terms__c.field-meta.xml
<CustomField>
    <fullName>NO_Of_Terms__c</fullName>
    <label>NO.Of Terms</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>