force-app/main/default/objects/Motor_Insurence__c/fields/Premium_Start_date__c.field-meta.xml
<CustomField>
    <fullName>Premium_Start_date__c</fullName>
    <label>Premium Start date</label>
    <type>Date</type>
</CustomField>