force-app/main/default/objects/Motor_Insurence__c/fields/PremiumType__c.field-meta.xml
<CustomField>
    <fullName>PremiumType__c</fullName>
    <label>PremiumType</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>quarterly</fullName>
            </value>
            <value>
                <fullName>Half yearly</fullName>
            </value>
            <value>
                <fullName>yearly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>